# GraphicLibrary

./: .gitignore  CMakeLists.txt  README.md
modules/: CMakeLists.txt
modules/Core/: CMakeLists.txt  Core.hpp
modules/Core/entities/include/: AnimatedBone.h  Animation.h  Camera.h  Configuration.h  GameEntity.h  Joint.h  Light.h  Material.h  MockShader.h  Renderable.h  Sampler.h  Scene.h  Shader.h  Skin.h  Texture.h
modules/Core/entities/src/: GameEntity.cpp  Light.cpp  Renderable.cpp
modules/Core/include/: CoreSystem.h  GameBaseEntity.h  OpenGLAPI.h  ResourcesManager.h  SDLAPI.h
modules/Core/interfaces/: ConfigurationSystem.h  InputSystem.h  RenderingSystem.h  ShaderFactory.h
modules/Core/interfaces/includes/: InputSystemMock.h  PropertiesManager.h  RenderingSystemMock.h  ShaderFactoryMock.h  ShaderManager.h
modules/Core/interfaces/src/: InputSystemMock.cpp  PropertiesManager.cpp  RenderingSystemMock.cpp  ShaderFactoryMock.cpp  ShaderManager.cpp
modules/Core/res/: properties.json
modules/Core/res/assets/models/: BolaIluminada.gltf  IcosphereIluminada.gltf  Suzanne.gltf  animated.gltf  animation_lowpoll.gltf  ball.gltf  bolaBrick.gltf  bolaNormalMapping.gltf  bolaPasto.gltf  bolaPastoNormals.gltf  bolaTangente.gltf  bolaUltraLisa.gltf  cilindroTangente.gltf  cone.gltf  cosaTangente.gltf  cross.gltf  cubeNormal.gltf  cuboIluminado.gltf  cubo_animado_ataque.gltf  cubo_animado_movimiento.gltf  dadoTangente.gltf  deadPoolIluminated.gltf  deadpool.gltf  deadpool_static.gltf  goldBall.gltf  paraBall.gltf  pildora.gltf  plane.gltf  planePara.gltf  planeParaBrick.gltf  sphere.gltf  sphereParallax.gltf  stoneBall.gltf  stoneCube.gltf  stoneWall.gltf  trapecio.gltf  ultraSphere.gltf
modules/Core/src/: CoreSystem.cpp  GameBaseEntity.cpp  OpenGLAPI.cpp  ResourcesManager.cpp  SDLAPI.cpp
modules/Disk/: CMakeLists.txt  Disk.h
modules/Disk/include/: ResourcesManager.h
modules/Disk/src/: ResourcesManager.cpp
modules/GUI/: CMakeLists.txt
modules/GUI/include/: GUIBase.h  GUIEditorWindows.h  GUIFactory.h  GUIManager.h  GUIWindow.h
modules/GUI/src/: GUIBase.cpp  GUIButton.cpp  GUIEditorWindows.cpp  GUIFactory.cpp  GUIWindow.cpp
modules/Input/: CMakeLists.txt
modules/Input/include/: EventListener.h  EventManager.h
modules/Input/src/: EventManager.cpp
modules/Render/: CMakeLists.txt
modules/Render/glsl/: lightning.frag  normal.vert  normalMapping.frag  normalMapping.vert  parallaxMapping.frag  parallaxMapping.vert  simple.vert  texture.vert
modules/Render/include/: Material.h  MaterialOpenGL.h  Renderable.h  RenderableFactoryOpenGL.h  RenderableOpenGL.h  Renderer.h  RendererOpenGL.h  Shader.h  ShaderFactoryOpenGL.h  ShaderManagerOpenGL.h  ShaderOpenGL.h  glad.h
modules/Render/include/shaders/modelShaders/: ColorShader.h  LightningShader.h  NormalMappingShader.h  NormalShader.h  ParallaxMappingShader.h  TextureShader.h
modules/Render/res/shaders/: lightning.frag  lightning.vert  normalMapping.frag  normalMapping.vert  parallaxMapping.frag  parallaxMapping.vert  simple.frag  simple.vert
modules/Render/shaders/include/: ColorShader.h  LightningShader.h  NormalMappingShader.h  NormalShader.h  ParallaxMappingShader.h  TextureShader.h
modules/Render/shaders/modelShaders/include/: ColorShader.h  LightningShader.h  NormalMappingShader.h  NormalShader.h  ParallaxMappingShader.h  TextureShader.h
modules/Render/shaders/modelShaders/src/: ColorShader.cpp  LightningShader.cpp  NormalMappingShader.cpp  ParallaxMappingShader.cpp  TextureShader.cpp
modules/Render/shaders/src/: ColorShader.cpp  LightningShader.cpp  NormalMappingShader.cpp  NormalShader.cpp  ParallaxMappingShader.cpp  TextureShader.cpp
modules/Render/src/: Material.cpp  MaterialOpenGL.cpp  Renderable.cpp  RenderableFactoryOpenGL.cpp  RenderableOpenGL.cpp  Renderer.cpp  RendererOpenGL.cpp  Shader.cpp  ShaderFactoryOpenGL.cpp  ShaderManagerOpenGL.cpp  ShaderOpenGL.cpp  glad.c
modules/Render/src/shaders/modelShaders/: ColorShader.cpp  LightningShader.cpp  NormalMappingShader.cpp  NormalShader.cpp  ParallaxMappingShader.cpp  TextureShader.cpp
src/: CMakeLists.txt  main.cpp
src/events/: CloseEvent.cpp  CloseEvent.h
